Convert to static site: Use Firebase Firestore directly, remove backend dependency

--- a/public/rsvp.html
+++ b/public/rsvp.html
@@ -199,6 +199,6 @@
   </footer>
 
   <script src="js/navigation.js"></script>
-  <script src="js/rsvp-page.js"></script>
+  <script type="module" src="js/rsvp-page.js"></script>
 </body>
 </html>
