Fix: Load all JS files as ES6 modules for proper import support

--- a/public/details.html
+++ b/public/details.html
@@ -207,7 +207,7 @@
     </div>
   </footer>
 
-  <script src="js/navigation.js"></script>
-  <script src="js/event-display.js"></script>
+  <script type="module" src="js/navigation.js"></script>
+  <script type="module" src="js/event-display.js"></script>
 </body>
 </html>
