--- a/public/gallery.html
+++ b/public/gallery.html
@@ -160,6 +160,6 @@
     </div>
   </footer>
 
-  <script src="js/navigation.js"></script>
+  <script type="module" src="js/navigation.js"></script>
 </body>
 </html>
