--- a/public/home.html
+++ b/public/home.html
@@ -228,7 +228,7 @@
     </div>
   </footer>
 
-  <script src="js/navigation.js"></script>
+  <script type="module" src="js/navigation.js"></script>
   <script type="module" src="js/home-login.js"></script>
 </body>
 </html>
