--- a/public/index.html
+++ b/public/index.html
@@ -292,6 +292,6 @@
   <!-- Firebase Modular SDK (loaded via modules) -->
   <script type="module" src="js/firebase-config.js"></script>
   <script type="module" src="js/home-login.js"></script>
-  <script src="js/navigation.js"></script>
+  <script type="module" src="js/navigation.js"></script>
 </body>
 </html>
