--- a/public/rsvp.html
+++ b/public/rsvp.html
@@ -198,7 +198,7 @@
     </div>
   </footer>
 
-  <script src="js/navigation.js"></script>
+  <script type="module" src="js/navigation.js"></script>
   <script type="module" src="js/rsvp-page.js"></script>
 </body>
 </html>
