--- a/public/venue.html
+++ b/public/venue.html
@@ -177,7 +177,7 @@
     </div>
   </footer>
 
-  <script src="js/navigation.js"></script>
+  <script type="module" src="js/navigation.js"></script>
   <script>
     // Update venue with guest event data
     document.addEventListener('DOMContentLoaded', () => {
