Improve page load and routing

--- a/index.html
+++ b/index.html
@@ -293,5 +293,11 @@
   <script type="module" src="js/firebase-config.js"></script>
   <script type="module" src="js/home-login.js"></script>
   <script type="module" src="js/navigation.js"></script>
+  
+  <!-- Ensure page is visible on load -->
+  <script>
+    document.documentElement.style.visibility = 'visible';
+    document.body.style.visibility = 'visible';
+  </script>
 </body>
 </html>
