Add debug logging and cache busting for RSVP form

--- a/rsvp.html
+++ b/rsvp.html
@@ -163,6 +163,11 @@
 
               <!-- Status Messages -->
               <div id="formStatus" class="form-status"></div>
+              
+              <!-- Debug info -->
+              <div style="margin-top: 1rem; padding: 0.75rem; background: #f0f0f0; border-radius: 6px; font-size: 0.85rem; color: #666;">
+                <strong>Debug:</strong> Script loaded at <span id="loadTime"></span>
+              </div>
             </form>
 
             <!-- Success Message -->
@@ -198,7 +203,7 @@
     </div>
   </footer>
 
-  <script type="module" src="js/navigation.js"></script>
-  <script type="module" src="js/rsvp-page.js"></script>
+  <script type="module" src="js/navigation.js?v=2"></script>
+  <script type="module" src="js/rsvp-page.js?v=2"></script>
 </body>
 </html>
