--- a/rsvp.html
+++ b/rsvp.html
@@ -158,7 +158,7 @@
 
               <!-- Submit -->
               <div class="form-actions">
-                <button type="submit" class="btn primary full-width">Submit RSVP</button>
+                <button type="submit" class="btn primary full-width" id="submitBtn">Submit RSVP</button>
               </div>
 
               <!-- Status Messages -->
@@ -166,7 +166,8 @@
               
               <!-- Debug info -->
               <div style="margin-top: 1rem; padding: 0.75rem; background: #f0f0f0; border-radius: 6px; font-size: 0.85rem; color: #666;">
-                <strong>Debug:</strong> Script loaded at <span id="loadTime"></span>
+                <strong>Debug:</strong> Script loaded at <span id="loadTime">...</span><br>
+                <strong>Button clicks:</strong> <span id="clickCount">0</span>
               </div>
             </form>
 
@@ -203,7 +204,7 @@
     </div>
   </footer>
 
-  <script type="module" src="js/navigation.js?v=3"></script>
-  <script type="module" src="js/rsvp-page.js?v=3"></script>
+  <script type="module" src="js/navigation.js?v=4"></script>
+  <script type="module" src="js/rsvp-page.js?v=4"></script>
 </body>
 </html>
