--- a/rsvp.html
+++ b/rsvp.html
@@ -158,7 +158,7 @@
 
               <!-- Submit -->
               <div class="form-actions">
-                <button type="submit" class="btn primary full-width" id="submitBtn">Submit RSVP</button>
+                <button type="submit" class="btn primary full-width" id="submitBtn" onclick="window.testClick=window.testClick?window.testClick+1:1; document.getElementById('clickCount').textContent=window.testClick; document.getElementById('clickCount').style.color='green'; console.log('Inline click detected:', window.testClick); return true;">Submit RSVP</button>
               </div>
 
               <!-- Status Messages -->
@@ -167,7 +167,8 @@
               <!-- Debug info -->
               <div style="margin-top: 1rem; padding: 0.75rem; background: #f0f0f0; border-radius: 6px; font-size: 0.85rem; color: #666;">
                 <strong>Debug:</strong> Script loaded at <span id="loadTime">...</span><br>
-                <strong>Button clicks:</strong> <span id="clickCount">0</span>
+                <strong>Button clicks:</strong> <span id="clickCount" style="font-size: 1.2em;">0</span><br>
+                <button type="button" onclick="alert('JavaScript is working!'); console.log('Test button works');" style="margin-top: 0.5rem; padding: 0.5rem 1rem; background: #28a745; color: white; border: none; border-radius: 4px; cursor: pointer;">Test JS</button>
               </div>
             </form>
 
@@ -204,7 +205,16 @@
     </div>
   </footer>
 
-  <script type="module" src="js/navigation.js?v=4"></script>
-  <script type="module" src="js/rsvp-page.js?v=4"></script>
+  <script type="module" src="js/navigation.js?v=5"></script>
+  <script type="module" src="js/rsvp-page.js?v=5"></script>
+  
+  <!-- Inline script as backup -->
+  <script>
+    console.log('✅ Inline script running!');
+    document.addEventListener('DOMContentLoaded', function() {
+      console.log('✅ DOM loaded - inline script');
+      document.getElementById('loadTime').textContent = new Date().toLocaleTimeString() + ' (inline)';
+    });
+  </script>
 </body>
 </html>
